--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/profit.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/profit.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 
-<div class="container-fluid "  style="border: 1px solid;">
+<div class="container-fluid "  style="border: 1px solid; background-color:rgba(0,0,0,.4);">
     <div class="row">
         <div class="col-sm-6 m-0 p-0 b1 " style="border-right: 1px solid;" >
            
@@ -29,7 +29,7 @@
 
                 <ul class="ul">
                     <li class="list2"><a href="#">Sales Acount</a></li>
-                    <li class="list2"><a href="#" >Direct Income</a></li>
+                    <li class="list2"><a href="payhead_list" >Direct Income</a></li>
                     <li class="list2"><a href="stockgroup" >Closing stock</a></li>
                     <li class="list2 mt-5"><a href="#" >Gross profit</a></li>
                     <li class="list2"><a href="#" >Indirect Incomes</a></li>
