--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stockgroup.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stockgroup.html
@@ -35,7 +35,7 @@
                 <tbody>
                 {% for p in std %}
                   <tr>
-                    <td class="table_row"><a href="{% url 'item_list' %}">{{p.name}}</a></td>
+                    <td class="table_row"><a href="{% url 'item_list' p.id %}">{{p.name}}</a></td>
                     <td></td>
                     <td></td>
                     <td></td>
