--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/ledger.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/ledger.html
@@ -1500,7 +1500,11 @@ function bill(){
             <div class="col-sm-4 m-0 p-0"></div>
             <div class="col-sm-2 m-0 p-0"> <p for="setgst" class="text-center p-2 m-0" style="height:100%;" >Opening balance (on 1-Aprl-22)</p></div>
             <div class="col-sm-2 m-0 p-0"><input type="text" class="form-control" name="ledger_opening_bal" id="opening_balance" placeholder=""></div>
-            <div class="col-sm-4 m-0 p-0"></div>
+            <div class="col-sm-1 ml-1 p-0"><select type="text" class="form-control" name="cd_db" id="opening_balance" placeholder="">
+                <option value="Cr">Cr</option>
+                <option value="Dr">Dr</option>
+            </select>
+            </div>
         </div>
             <div class="enter w-100 py-4"><button class="btn btn-info w-25 px-4">CREATE</button></div>   
             
