--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/ledger.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/ledger.html
@@ -63,7 +63,7 @@
                                 <option value="current_liabilities">Current Liabilities</option>
                                 <option value="Bank_Account">Deposits (Asset)</option>
                                 <option value="dirctexpncs1">Direct Expenses</option>
-                                <option value="dirctincome">Direct Incomes</option>
+                                <option value="Direct Incomes">Direct Incomes</option>
                                 <option value="dutiesAndtax">Duties and Taxes</option>
                                 <option value="Expences_Direct">Expenses(Direct)</option>
                                 <option value="Expences_Indirect">Expenses(Indirect)</option>
