--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/indirect_income.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/indirect_income.html
@@ -142,8 +142,9 @@
            
 
             <div class="row ml-2" style="margin-top: 15px;margin-bottom: 15px; font-size: 18px;">
-                <div class="col-sm-11 m-0 p-0 " ><a style="margin-left: 30px;">Grand Total</a></div>
-                <div class="col-sm-1 m-0 p-0 " ><a class="total" >1000.00</a></div>
+                <div class="col-sm-10 m-0 p-0 " ><a style="margin-left: 30px;">Grand Total</a></div>
+                <div class="col-sm-1 m-0 p-0 " ><a class="total" >{{total_d}}.00</a></div>
+                <div class="col-sm-1 m-0 p-0 " ><a class="total" >{{total}}.00</a></div>
                    
             </div>
 
