--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/profit.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/profit.html
@@ -28,11 +28,11 @@
 
 
                 <ul class="ul">
-                    <li class="list2"><a href="#">Sales Acount</a></li>
+                    <li class="list2"><a href="sales">Sales Acount</a><i class="float-right">{{total}}.00</i></li>
                     <li class="list2"><a href="payhead_list" >Direct Income</a></li>
                     <li class="list2"><a href="stockgroup" >Closing stock</a></li>
                     <li class="list2 mt-5"><a href="#" >Gross profit</a></li>
-                    <li class="list2"><a href="#" >Indirect Incomes</a></li>
+                    <li class="list2"><a href="indirect" >Indirect Incomes</a></li>
                    
                     
                 </ul>
