--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/sales_accounts.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/sales_accounts.html
@@ -86,8 +86,8 @@
                 <div class="row" style="border-top: 1px solid; margin: 0px;">
                     <div class="col-sm-9 m-0 p-0 " ><p class="ABC"><h6 style="margin-left: 100px;">Opening Balance</h6></p></div></div>
                     <div class="row" style="border-top: 1px solid; margin: 0px;">
-                        <div class="col-sm-6 m-0 p-0 " ><p class="ABC"><h6 style="margin-left: 50px;">Debit</h6></p></div>
-                        <div class="col-sm-6 m-0 p-0 " style="border-left: 1px solid;"><p class="ABC"><h6 style="margin-left: 50px;">Credit</h6></p></div></div>
+                        <div class="col-sm-6 mt-2 p-0 " ><p class="ABC"><h6 style="margin-left: 50px;">Debit</h6></p></div>
+                        <div class="col-sm-6 mt-2 p-0 " style="border-left: 1px solid;"><p class="ABC"><h6 style="margin-left: 50px;">Credit</h6></p></div></div>
                         
                     
                     
@@ -102,15 +102,15 @@
                
                 
 
-
+<!-- 
                 {% for p in std %}
                 
                 <li class="list2">{{p.name}} <i class="open">{{p.opening_balance}}</i></li>
 
-                {% endfor  %}
+                {% endfor  %} -->
                 
 
-                {% for t in stm %}
+                {% for t in std %}
                
                  {% if t.ledger_cr_db == "Cr" %}
                    <li class="list2">{{t.ledger_name}} <i class="open">{{t.ledger_opening_bal}}</i></li>
@@ -142,8 +142,9 @@
            
 
             <div class="row ml-2" style="margin-top: 15px;margin-bottom: 15px; font-size: 18px;">
-                <div class="col-sm-11 m-0 p-0 " ><a style="margin-left: 30px;">Grand Total</a></div>
-                <div class="col-sm-1 m-0 p-0 " ><a class="total" >1000.00</a></div>
+                <div class="col-sm-10 m-0 p-0 " ><a style="margin-left: 30px;">Grand Total</a></div>
+                <div class="col-sm-1 m-0 p-0 " ><a class="total" >{{total_d}}.00</a></div>
+                <div class="col-sm-1 m-0 p-0 " ><a class="total ml-3" >{{total}}.00</a></div>
                    
             </div>
 
