--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stockgroup.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stockgroup.html
@@ -27,7 +27,7 @@
 
 
 
-            <table class="table " border="1px" style="border: 1px solid rgba(128, 128, 128, 0.6)">
+            <table class="table "  style="border: 1px solid rgba(128, 128, 128, 0.6)">
                 <thead>
                   <tr>
                     <th scope="col"></th>
