--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/payhead_voucher.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/payhead_voucher.html
@@ -26,7 +26,7 @@
                 <div class="row  " style="height: 50px;">
                 <div class="col ">
                     <h6>
-                    <span class=" d-flex justify-content-start" style="margin-top: 8px;"> Ledger : &nbsp;<strong>{{std.ledger_name}} </strong> </span>
+                    <span class=" d-flex justify-content-start" style="margin-top: 8px;"> Ledger : &nbsp;<strong>{{std.name}} </strong> </span>
                     <span class="d-flex  justify-content-end " style="margin-top: -15px;"> 1-Apr-22 to 30-Apr-22</span>
                 </h6>
                 </div>
@@ -80,7 +80,7 @@
                          
                             </td>
                             <td style="text-align: right;" id=""><strong></strong><br>
-                                <strong>{{ std.ledger_opening_bal }}</strong></td>
+                                <strong>{{ std.opening_balance }}</strong></td>
 
                           
                              
@@ -106,7 +106,7 @@
                           
                             
                             <td style="text-align: right;"><strong></strong></td>
-                            <td style="text-align: right;">{{ std.ledger_opening_bal }}<strong></strong></td>
+                            <td style="text-align: right;">{{ std.opening_balance }}<strong></strong></td>
                             
                             <!-- <td style="text-align: right;"><strong></strong></td>
                             <td style="text-align: right;"><strong></strong></td> -->
