--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/profit.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/profit.html
@@ -29,10 +29,10 @@
 
                 <ul class="ul">
                     <li class="list2"><a href="sales">Sales Acount</a><i class="float-right">{{total}}.00</i></li>
-                    <li class="list2"><a href="payhead_list" >Direct Income</a></li>
-                    <li class="list2"><a href="stockgroup" >Closing stock</a></li>
+                    <li class="list2"><a href="payhead_list" >Direct Income</a><i class="float-right">{{total_direct}}.00</i></li>
+                    <li class="list2"><a href="stockgroup" >Closing stock</a><i class="float-right">{{total_grp}}.00</i></li>
                     <li class="list2 mt-5"><a href="#" >Gross profit</a></li>
-                    <li class="list2"><a href="indirect" >Indirect Incomes</a></li>
+                    <li class="list2"><a href="indirect" >Indirect Incomes</a><i class="float-right">{{total_income}}.00</i></li>
                    
                     
                 </ul>
