--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stockgroup.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stockgroup.html
@@ -42,7 +42,7 @@
                     <td class="table_row"><a class="name" href="{% url 'item_list' p.id %}">{{p.name}}</a></td>
                     <td></td>
                     <td></td>
-                    <td></td>
+                    <td>{{total}}</td>
                   </tr>
                 {% endfor %}
                   
