--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/profit.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/profit.html
@@ -13,7 +13,17 @@
                     <div class="col-sm-6 m-0 p-0 head"><p class=" ABC">ABC Limited </br>For 1-Apr-22 </p></div>
             </div>
 
-            
+            <ul class="ul">
+
+                <li class="list2"><a href="purchase">Purchase Account</a><i  class="float-right"></i></li>
+                <li class="list2"><a href="{% url 'direct_exprenses' %}" >Direct Expenses</a><i  class="float-right"></i></li>
+                <li class="list2"><a href="stockgroup" >Opening Stock</a><i  class="float-right">{{total_grp}}</i></li>
+                <li class="list2" style="border-top:1px solid ;"><i class="float-right" ></i></li>
+                <li class="list2 mt-5"><a href="#" >Gross profit</a></li>
+                <li class="list2"><a href="indirect" >Indirect Expenses</a><i class="float-right"></i></li>
+               
+
+            </ul>
 
           
             
@@ -28,11 +38,12 @@
 
 
                 <ul class="ul">
-                    <li class="list2"><a href="sales">Sales Acount</a><i class="float-right">{{total}}.00</i></li>
-                    <li class="list2"><a href="payhead_list" >Direct Income</a><i class="float-right">{{total_direct}}.00</i></li>
-                    <li class="list2"><a href="stockgroup" >Closing stock</a><i class="float-right">{{total_grp}}.00</i></li>
+                    <li class="list2"><a href="sales">Sales Acount</a><i id="sales" class="float-right">{{total}}</i></li>
+                    <li class="list2"><a href="payhead_list" >Direct Income</a><i id="direct" class="float-right">{{total_direct}}</i></li>
+                    <li class="list2"><a href="stockgroup" >Closing stock</a><i id="stock" class="float-right">{{total_grp}}</i></li>
+                    <li class="list2" style="border-top:1px solid ;"><i class="float-right" id="total"></i></li>
                     <li class="list2 mt-5"><a href="#" >Gross profit</a></li>
-                    <li class="list2"><a href="indirect" >Indirect Incomes</a><i class="float-right">{{total_income}}.00</i></li>
+                    <li class="list2"><a href="indirect" >Indirect Incomes</a><i class="float-right">{{total_income}}</i></li>
                    
                     
                 </ul>
@@ -82,6 +93,27 @@
 
     </div>
 </div>
+
+<script>
+    setTimeout(function ad(){ 
+        var a=document.getElementById('sales').innerHTML;
+        var b=document.getElementById('direct').innerHTML;
+        var c=document.getElementById('stock').innerHTML;
+        var d1 = parseInt(a);
+        var d2 = parseInt(b);
+        var d3 = parseInt(c);
+        var d=d1+d2+d3;
+        console.log(d)
+        
+        document.getElementById("total").innerHTML = d;
+  
+     
+     }, 100);
+
+
+
+
+</script>
 
 
 
