--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stock_month.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stock_month.html
@@ -124,7 +124,7 @@ cursor:pointer;
 
                            
                             <tr class="table-row" >
-                                <td>April</td>
+                                <td><a href="{% url 'stock_voucher' std.id %}">April</a></td>
                                 <td ></td>
                                 <td></td>
                                 <td  style="text-align: center;"><strong>{{std.quantity}}</strong></td>
