--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/profit.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/profit.html
@@ -2,6 +2,23 @@
 
 {% block body %}
 
+<style>
+
+    #total_profit{
+        font-weight: 800;
+        letter-spacing: 2px;
+    }
+    #total_profit2{
+        font-weight: 800;
+        letter-spacing: 2px;
+    }
+    .hide{
+        display: none;
+        justify-content: center;
+        align-items:center;
+    }
+</style>
+
 
 <div class="container-fluid "  style="border: 1px solid; background-color:rgba(0,0,0,.4);">
     <div class="row">
@@ -15,15 +32,37 @@
 
             <ul class="ul">
 
-                <li class="list2"><a href="purchase">Purchase Account</a><i  class="float-right"></i></li>
-                <li class="list2"><a href="{% url 'direct_exprenses' %}" >Direct Expenses</a><i  class="float-right"></i></li>
+                <li class="list2"><a href="purchase">Purchase Account</a><i id="purch" class="float-right">{{total_purch}}</i></li>
+                <li class="list2"><a href="{% url 'direct_exprenses' %}" >Direct Expenses</a><i id="expenses" class="float-right">{{total_direct_exp}}</i></li>
                 <li class="list2"><a href="stockgroup" >Opening Stock</a><i  class="float-right">{{total_grp}}</i></li>
-                <li class="list2" style="border-top:1px solid ;"><i class="float-right" ></i></li>
-                <li class="list2 mt-5"><a href="#" >Gross profit</a></li>
-                <li class="list2"><a href="indirect" >Indirect Expenses</a><i class="float-right"></i></li>
+                <li class="list2 "><a  href="#" >Gross profit</a><i id="gross" class="float-right"></i></li>
+                <li class="list2" style="border-top:1px solid ;"><i id="total2" class="float-right" ></i></li>
+                
+                <li class="list2 mt-5"><a href="{% url 'indirect_expenses' %}" >Indirect Expenses</a><i id="indirect_exp" class="float-right">{{total_indirect}}</i></li>
+                <div>
+                    <li class="list2">Net profit<i id="net_profit" class="float-right"></i></li>
+                </div>
                
 
             </ul>
+
+ <!-- gross profit loss method -->
+             <ul class="hide" id="">
+
+                <li class="list2"><a href="purchase">Purchase Account</a><i id="purch" class="float-right">{{total_purch}}</i></li>
+                <li class="list2"><a href="{% url 'direct_exprenses' %}" >Direct Expenses</a><i id="expenses" class="float-right">{{total_direct_exp}}</i></li>
+                <li class="list2"><a href="stockgroup" >Opening Stock</a><i  class="float-right">{{total_grp}}</i></li>
+               
+                <li class="list2" style="border-top:1px solid ;"><i id="total2" class="float-right" ></i></li>
+                
+                <li class="list2 mt-5 "><a  href="#" >Gross profit</a><i id="gross" class="float-right"></i></li>
+                <li class="list2"><a href="{% url 'indirect_expenses' %}" >Indirect Expenses</a><i id="indirect_exp" class="float-right">{{total_indirect}}</i></li>
+               
+
+               
+
+
+             </ul>
 
           
             
@@ -42,11 +81,29 @@
                     <li class="list2"><a href="payhead_list" >Direct Income</a><i id="direct" class="float-right">{{total_direct}}</i></li>
                     <li class="list2"><a href="stockgroup" >Closing stock</a><i id="stock" class="float-right">{{total_grp}}</i></li>
                     <li class="list2" style="border-top:1px solid ;"><i class="float-right" id="total"></i></li>
-                    <li class="list2 mt-5"><a href="#" >Gross profit</a></li>
-                    <li class="list2"><a href="indirect" >Indirect Incomes</a><i class="float-right">{{total_income}}</i></li>
+                    <li class="list2 mt-5"><a href="#" >Gross profit</a><i class="float-right" id="gross_profit"></i></li>
+                    <li class="list2"><a href="indirect" >Indirect Incomes</a><i id="indirect" class="float-right">{{total_income}}</i></li>
                    
                     
                 </ul>
+
+
+         
+            <!-- gross profit loss method -->
+               
+                <ul class="hide">
+
+                    <li class="list2"><a href="sales">Sales Acount</a><i id="sales" class="float-right">{{total}}</i></li>
+                    <li class="list2"><a href="payhead_list" >Direct Income</a><i id="direct" class="float-right">{{total_direct}}</i></li>
+                    <li class="list2"><a href="stockgroup" >Closing stock</a><i id="stock" class="float-right">{{total_grp}}</i></li>
+                    <li class="list2 "><a href="#" >Gross Loss</a><i class="float-right" id="gross_profit"></i></li>
+                    <li class="list2" style="border-top:1px solid ;"><i class="float-right" id="total"></i></li>
+                    
+                    <li class="list2 mt-5"><a href="indirect" >Indirect Incomes</a><i id="indirect" class="float-right">{{total_income}}</i></li>
+                    <li class="list2">Net Loss<i id="net_profit" class="float-right"></i></li>
+
+                </ul>
+
 
                
 
@@ -58,7 +115,7 @@
            
 
             <div class="row ml-0" >
-                <div class="col-sm-6 m-0 p-0 " ><a class="total">Total</a></div>
+                <div class="col-sm-11 ml-4 p-0 " ><a class="total">Total</a><i id="total_profit2" class="float-right"></i></div>
                    
             </div>
 
@@ -72,7 +129,7 @@
            
 
             <div class="row ml-0" >
-                <div class="col-sm-6 m-0 p-0 " ><a class="total">Total</a></div>
+                <div class="col-sm-11 ml-4 p-0 " ><a class="total">Total</a><i id="total_profit" class="float-right"></i></div>
                    
             </div>
 
@@ -106,6 +163,62 @@
         console.log(d)
         
         document.getElementById("total").innerHTML = d;
+       
+
+        let i=document.getElementById('purch').innerHTML;
+        let j=document.getElementById('expenses').innerHTML;
+
+        let e1=parseInt(i);
+        let e2=parseInt(j);
+
+        let=e=e1+e2+d3;
+        console.log(e)
+        
+       
+       
+
+        if (d>e){
+
+            let f=d-e;
+            console.log(f)
+            document.getElementById('gross').innerHTML=f;
+            document.getElementById("total2").innerHTML = d;
+            document.getElementById('gross_profit').innerHTML=f;
+            
+            // total profit
+
+            let indirect_income=document.getElementById('indirect').innerHTML;
+            let v=parseInt(indirect_income);
+            let total_profit=f+v;
+            document.getElementById('total_profit').innerHTML=total_profit;
+
+             // total of net profit
+
+            let indirect_exp=document.getElementById('indirect_exp').innerHTML;
+            let g1=parseInt(indirect_exp);
+    
+            let net_profit=f-g1;
+            document.getElementById('net_profit').innerHTML=net_profit;
+
+            //total particular exp
+
+            let total_particular_exp=g1+net_profit;
+            document.getElementById('total_profit2').innerHTML=total_particular_exp;
+
+            
+
+
+
+
+        }
+
+        else if(d<e){
+
+
+
+        }
+
+
   
      
      }, 100);
